navigation menu on mobile fixed

--- a/index.css
+++ b/index.css
@@ -342,7 +342,7 @@ body{
   margin-bottom: 126px;
 }
 .inputfie{
-  margin-bottom: 109px
+  margin-bottom: 80px
 }
 
 .maincontainer{
